test/tests/errors/error-trap-labels-forgotten.sm
// true
// false
/**/
/**/

program {
    trap {
        output 1;
a:
        output 4;
    }

    trap {
        escapeto a;
    }
}